// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders a Switch component with loading dots, loading className and without the reverse className 1`] = `
<Checkbox
  className="carbon-switch  carbon-switch__loading"
  disabled={true}
  label="My label"
  readOnly={true}
  reverse={false}
>
  <div
    className="carbon-switch__switch carbon-switch__switch__loading"
  >
    <span
      className="carbon-switch__slider"
    />
    <div
      className="carbon-switch__on"
    >
      <div
        className="carbon-loading-dots"
      >
        <div
          className="carbon-loading-dots__bounce carbon-loading-dots__bounce1"
        />
        <div
          className="carbon-loading-dots__bounce carbon-loading-dots__bounce2"
        />
        <div
          className="carbon-loading-dots__bounce carbon-loading-dots__bounce3"
        />
      </div>
    </div>
    <div
      className="carbon-switch__off"
    >
      <div
        className="carbon-loading-dots"
      >
        <div
          className="carbon-loading-dots__bounce carbon-loading-dots__bounce1"
        />
        <div
          className="carbon-loading-dots__bounce carbon-loading-dots__bounce2"
        />
        <div
          className="carbon-loading-dots__bounce carbon-loading-dots__bounce3"
        />
      </div>
    </div>
  </div>
</Checkbox>
`;

exports[`Switch renders a Switch component with reverse className 1`] = `
<Checkbox
  className="carbon-switch  carbon-switch__reverse"
  label="My label"
  reverse={true}
>
  <div
    className="carbon-switch__switch"
  >
    <span
      className="carbon-switch__slider"
    />
    <div
      className="carbon-switch__on"
    >
      <Icon
        bgSize="small"
        type="tick"
      />
    </div>
    <div
      className="carbon-switch__off"
    >
      <Icon
        bgSize="small"
        type="cross"
      />
    </div>
  </div>
</Checkbox>
`;
